# thunderhill

./: .gitattributes  .gitignore  .gitmodules  README.md  tmp.csv
PID/: README.md
PID/src/: PID.cpp  main.cpp
PID/tools/: endTraining.sh  runRobot.sh  startTrainingThunderhill.sh  twittle.py
data_interpolation/: README.md  output_example.txt  thunderhill-throttle-brake-interpolation.ipynb
extract-from-video/: .gitignore  extract.py
joystick_commander/: Makefile  README.md
joystick_commander/include/: commander.h  messages.h
joystick_commander/src/: commander.c  joystick.c  messages.c  node.c
lanes_detection/: .gitattributes
lanes_detection/P1/: LANE_FINDING_final_version.ipynb
lanes_detection/P4/: P4_advanced_lanes_detection.ipynb  (+1 more)
models/: README.md  Thunderhill-Sim-Testing.ipynb  shuffleLoad.ipynb
models/nando/results/CNN-Nando-BOOTSTRAP-RECOVERY/MainNode/: CMakeLists.txt  MainNode.cpp
path_planning/: GPSLatLong2UTM.js  GPSTrack.ipynb  GPS_Track_exact.ipynb  PID.ipynb  Untitled.ipynb  bresenham.py  dataprovider.py  drawDataSetTrackColor.py  drawing.py  drive.py  geo.py  latlon2UTMcalc.ods  model.py  points.csv  pygameJoyDriveTest.py  robot.py  smoother.py  sorted_points.csv  thunderhill.kml
polysync/: README.md  convert_to_jpeg.py
polysync/record_data/RecorderNode/: CMakeLists.txt  README.md  RecorderNode.cpp
ros/: README.md
testing/: image.raw  print_images.py  transform.py
track-kml/: center_20160528-111333.log.seg3.json-all-rtk.kml  inside_20160528-105735.log.json-fixed-rtk.kml  outside_20160528-111333.log.seg1.json-fixed-rtk.kml
(+253 files in other folders)
